--- a/index.html
+++ b/index.html
@@ -1,79 +1,5 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="mainview.css">
+		<meta http-equiv='refresh' content='0; URL=pages/auth.html'>
 	</head>
-
-	<body>
-		<div class="content">
-			<div class="sidemenu">
-				<input id="tokenInput">
-				</input>
-				<button id="tokenSubmit">
-					Submit
-				</button>
-			</div>
-
-			<div class="gridcontainer">
-			</div>
-		</div>
-
-		<script type="text/javascript">
-			document.getElementById("tokenSubmit").onclick = function() {
-				var tokenValue = document.getElementById("tokenInput").value;
-				// printToken(tokenValue);
-				printPhotos(tokenValue);
-			};
-
-			function printToken(tokenValue) {
-				var tokenPrintDiv = document.createElement("div");
-				tokenPrintDiv.id = "tokenPrint";
-				const tokenPrintContent = document.createTextNode("Hello " + tokenValue);
-				tokenPrintDiv.appendChild(tokenPrintContent);
-				const tokenPrintUnderDiv = document.getElementById("tokenSubmit");
-				const sidemenuDiv = tokenPrintUnderDiv.parentNode;
-				sidemenuDiv.insertBefore(tokenPrintDiv, tokenPrintUnderDiv.nextSibling);
-			}
-
-			function fetchWithAuthentication(url, tokenValue) {
-				return fetch(url, {
-					headers: {
-						"Accept": "application/vnd.github+json",
-						"Authorization": "Bearer " + tokenValue,
-						"X-GitHub-Api-Version": "2022-11-28"
-					}
-				});
-			}
-
-			async function printPhotos(tokenValue) {
-				// Fetch the image.
-				const baseUrl = "https://api.github.com/repos/easonycliu/BorellaAndEasonPhotos/contents/"
-				const response = await fetchWithAuthentication(
-					baseUrl, tokenValue
-				);
-				const responseJson = await response.json();
-				responseJson.forEach(photoMetadata => {
-					if (photoMetadata.path.endsWith(".heic")) {
-						printPhoto(tokenValue, baseUrl, photoMetadata.path);
-					}
-				});
-			}
-
-			async function printPhoto(tokenValue, baseUrl, imagePath) {
-				// Fetch the image.
-				const response = await fetchWithAuthentication(
-					baseUrl + imagePath, tokenValue
-				);
-				const responseJson = await response.json();
-				const objectUrl = "data:image/png;base64," + responseJson.content;
-
-				const imageElementDiv = document.createElement('div');
-				imageElementDiv.className = "griditem";
-				const imageElement = document.createElement('img');
-				imageElement.src = objectUrl;
-				imageElementDiv.appendChild(imageElement)
-				const imageContainerDiv = document.getElementsByClassName("gridcontainer")[0];
-				imageContainerDiv.appendChild(imageElementDiv);
-			}
-		</script>
-	</body>
 </html>
