reconstructed and tested with local http server

--- a/pages/album.html
+++ b/pages/album.html
@@ -9,6 +9,6 @@
 			</div>
 		</div>
 
-		<script type="module" src="../js/album.js"></script>
+		<script src="../js/album.js" type="module"></script>
 	</body>
 </html>
