--- a/pages/auth.html
+++ b/pages/auth.html
@@ -14,6 +14,6 @@
 			</div>
 		</div>
 
-		<script type="module" src="../js/auth.js"></script>
+		<script src="../js/auth.js" type="module"></script>
 	</body>
 </html>
