--- a/pages/album.html
+++ b/pages/album.html
@@ -1,11 +1,12 @@
 <html>
 	<head>
+		<link rel="stylesheet" href="../css/generalPage.css">
 		<link rel="stylesheet" href="../css/albumPage.css">
 	</head>
 
 	<body>
 		<div class="content">
-			<div class="gridcontainer">
+			<div class="albumcontainer">
 			</div>
 		</div>
 
