--- a/pages/auth.html
+++ b/pages/auth.html
@@ -1,11 +1,12 @@
 <html>
 	<head>
+		<link rel="stylesheet" href="../css/generalPage.css">
 		<link rel="stylesheet" href="../css/authPage.css">
 	</head>
 
 	<body>
 		<div class="content">
-			<div class="sidemenu">
+			<div class="authmenu">
 				<input id="tokenInput">
 				</input>
 				<button id="tokenSubmit">
