add home page, style to be updated

--- a/pages/auth.html
+++ b/pages/auth.html
@@ -1,12 +1,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../css/generalPage.css">
-		<link rel="stylesheet" href="../css/authPage.css">
 	</head>
 
 	<body>
 		<div class="content">
-			<div class="authmenu">
+			<div class="menu">
 				<input id="tokenInput">
 				</input>
 				<button id="tokenSubmit">
